--- a/deblistering_settings/deblistering_settings.html
+++ b/deblistering_settings/deblistering_settings.html
@@ -31,6 +31,9 @@
             <div class="mx-auto"><input type="number" id="userInput" autofocus /></div>
             <div class="mx-auto"><br><button class="btn btn-success shadow" type="button" id="findBtn">Find</button><br></div>
             </div></center>
+
+            <center><b><div class="alert alert-danger shadow" style="font-size:18px; font-weight: bold;" id="drugNotFound" hidden>Drug not found!</b></div></center>
+
             <div id='settings'>
             <center><b><div class="alert alert-primary shadow" style="font-size:18px; font-weight: bold;" id="drugName"></b></div></center>
             <center>
