--- a/deblistering_settings/deblistering_settings.html
+++ b/deblistering_settings/deblistering_settings.html
@@ -28,8 +28,8 @@
         
             <center>
             <button class="btn btn-success shadow" style="width: 250px; font-weight: bold;" type="button" id="scanBtn">Go back to scanning</button>
-            <div class="mx-auto"><input type="number" id="userInput" autofocus /></div>
-            <div class="mx-auto"><br><button class="btn btn-success shadow" type="button" id="findBtn">Find</button><br></div>
+            <div class="mx-auto"><input class="form-control form-control" style="width: 15rem;" type="number" id="userInput" autofocus /></div>
+            <div class="mx-auto"><br><button class="btn btn-success shadow" style="width: 7rem;" type="button" id="findBtn">Find</button><br></div>
             </div></center>
 
             <center><b><div class="alert alert-danger shadow" style="font-size:18px; font-weight: bold;" id="drugNotFound" hidden>Drug not found!</b></div></center>
