--- a/deblistering_settings/deblistering_settings.html
+++ b/deblistering_settings/deblistering_settings.html
@@ -32,7 +32,7 @@
             <div class="mx-auto"><br><button class="btn btn-success shadow" style="width: 7rem;" type="button" id="findBtn">Find</button><br></div>
             </div></center>
 
-            <center><b><div class="alert alert-danger shadow" style="font-size:18px; font-weight: bold;" id="drugNotFound" hidden>Drug not found!</b></div></center>
+            <center><b><div class="alert alert-danger shadow" style="font-size:18px; font-weight: bold; margin-top: 1rem;" id="drugNotFound" hidden>Drug not found!</b></div></center>
 
             <div id='settings'>
             <center><b><div class="alert alert-primary shadow" style="font-size:18px; font-weight: bold;" id="drugName"></b></div></center>
